# STRIDE

./: .gitignore  HIERARCHY.md  LICENSE  M1_IMPLEMENTATION_NOTES.md  M2_IMPLEMENTATION_NOTES.md  M3_IMPLEMENTATION_NOTES.md  MIGRATION_NOTES.md  README.md  REGRESSION_REPORT.md  REGRESSION_REPORT_M2.md  REGRESSION_REPORT_M3.md  VALIDATION_AND_BENCHMARKING.md  VALIDATION_ROADMAP.md  VERIFICATION_M1.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reference/: v5_final_code_piece.py
scripts/: capture_golden.py
src/mechanism/: __init__.py  _legacy.py  cli.py  pipeline.py
tests/: conftest.py  test_aggregator.py  test_bootstrap.py  test_golden_csv.py  test_golden_figures.py  test_hierarchy.py  test_m1_integration.py  test_mechanism_report.py  test_neff.py  test_orchestrate.py  test_reproducibility.py  test_stats_parity.py  test_varcomp.py
validation/: README.md  __init__.py  __main__.py  _artifacts.py  _seed.py  adapters.py  baselines.py  calibrate.py  cli.py  experiments.py  figures.py  generate.py  metrics.py  predicted.py  processes.py  report.py  stats_tests.py  surrogates.py  tables.py  types.py
validation/artifacts/: method_comparison_DENV.yaml  metrics_DENV.yaml  rho_star_DENV_K10.yaml  rho_star_DENV_K3.yaml  rho_star_DENV_K5.yaml  rho_star_three_level_two_chain_K10.yaml  rho_star_three_level_two_chain_K3.yaml  rho_star_three_level_two_chain_K5.yaml  rho_star_two_level_single_chain_K10.yaml  rho_star_two_level_single_chain_K3.yaml  rho_star_two_level_single_chain_K5.yaml  sweep_results.jsonl  sweep_results_manifest.json
(+54 files in other folders)
